--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 
@@ -57,10 +59,29 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
+    window.addEventListener('keydown', function (e) {
+      //finds the audio for each key when hit
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`) //because it's a variable - ES6 template-> ${}
+      // animation
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`) 
 
-</script>
+      if (!audio) return; // stops function if it doesn't have audio associated with it
+      //console.log(audio);
+      
+      audio.currentTime = 0; //rewinds audio sound to the beginning so if you hit it multiple times in scuccession, it will play each time  
+      audio.play();
+      //console.log(key);
+
+      key.classList.add('playing');
+      
+    });
+
+    const keys = document.querySelectorAll('key');
+
+  </script>
 
 
 </body>
+
 </html>
