--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -94,7 +94,7 @@
     minuteHand.style.transform = `rotate(${minutesDegrees}deg)`; 
     hourHand.style.transform = `rotate(${hoursDegrees}deg)`; 
 
-    // add iff statements to get rid of glitch when hand reached almost 360 (hand goes all the way backwards instead of forward)- > would need to remove transition and add it back
+    // add if statements to get rid of glitch when hand reached almost 360 (hand goes all the way backwards instead of forward)- > would need to remove transition and add it back
 
     console.log(seconds);  //gets seconds of current minute
     console.log(minutes);  
