--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -12,26 +14,90 @@
 
     // Some data we can work with
 
-    const inventors = [
-      { first: 'Albert', last: 'Einstein', year: 1879, passed: 1955 },
-      { first: 'Isaac', last: 'Newton', year: 1643, passed: 1727 },
-      { first: 'Galileo', last: 'Galilei', year: 1564, passed: 1642 },
-      { first: 'Marie', last: 'Curie', year: 1867, passed: 1934 },
-      { first: 'Johannes', last: 'Kepler', year: 1571, passed: 1630 },
-      { first: 'Nicolaus', last: 'Copernicus', year: 1473, passed: 1543 },
-      { first: 'Max', last: 'Planck', year: 1858, passed: 1947 },
-      { first: 'Katherine', last: 'Blodgett', year: 1898, passed: 1979 },
-      { first: 'Ada', last: 'Lovelace', year: 1815, passed: 1852 },
-      { first: 'Sarah E.', last: 'Goode', year: 1855, passed: 1905 },
-      { first: 'Lise', last: 'Meitner', year: 1878, passed: 1968 },
-      { first: 'Hanna', last: 'Hammarström', year: 1829, passed: 1909 }
+    const inventors = [{
+        first: 'Albert',
+        last: 'Einstein',
+        year: 1879,
+        passed: 1955
+      },
+      {
+        first: 'Isaac',
+        last: 'Newton',
+        year: 1643,
+        passed: 1727
+      },
+      {
+        first: 'Galileo',
+        last: 'Galilei',
+        year: 1564,
+        passed: 1642
+      },
+      {
+        first: 'Marie',
+        last: 'Curie',
+        year: 1867,
+        passed: 1934
+      },
+      {
+        first: 'Johannes',
+        last: 'Kepler',
+        year: 1571,
+        passed: 1630
+      },
+      {
+        first: 'Nicolaus',
+        last: 'Copernicus',
+        year: 1473,
+        passed: 1543
+      },
+      {
+        first: 'Max',
+        last: 'Planck',
+        year: 1858,
+        passed: 1947
+      },
+      {
+        first: 'Katherine',
+        last: 'Blodgett',
+        year: 1898,
+        passed: 1979
+      },
+      {
+        first: 'Ada',
+        last: 'Lovelace',
+        year: 1815,
+        passed: 1852
+      },
+      {
+        first: 'Sarah E.',
+        last: 'Goode',
+        year: 1855,
+        passed: 1905
+      },
+      {
+        first: 'Lise',
+        last: 'Meitner',
+        year: 1878,
+        passed: 1968
+      },
+      {
+        first: 'Hanna',
+        last: 'Hammarström',
+        year: 1829,
+        passed: 1909
+      }
     ];
 
-    const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry', 'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire', 
-    'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony', 'Bennington, Chester', 'Benson, Leana', 
-    'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton', 'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi', 
-     'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph', 'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank', 
-     'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'];
+    const people = ['Beck, Glenn', 'Becker, Carl', 'Beckett, Samuel', 'Beddoes, Mick', 'Beecher, Henry',
+      'Beethoven, Ludwig', 'Begin, Menachem', 'Belloc, Hilaire',
+      'Bellow, Saul', 'Benchley, Robert', 'Benenson, Peter', 'Ben-Gurion, David', 'Benjamin, Walter', 'Benn, Tony',
+      'Bennington, Chester', 'Benson, Leana',
+      'Bent, Silas', 'Bentsen, Lloyd', 'Berger, Ric', 'Bergman, Ingmar', 'Berio, Luciano', 'Berle, Milton',
+      'Berlin, Irving', 'Berne, Eric', 'Bernhard, Sandra', 'Berra, Yogi',
+      'Berry, Halle', 'Berry, Wendell', 'Bethea, Erin', 'Bevan, Aneurin', 'Bevel, Ken', 'Biden, Joseph',
+      'Bierce, Ambrose', 'Biko, Steve', 'Billings, Josh', 'Biondo, Frank',
+      'Birrell, Augustine', 'Black, Elk', 'Blair, Robert', 'Blair, Tony', 'Blake, William'
+    ];
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
@@ -78,61 +144,72 @@
     //   totalYears += inventors[i].year
     // } .... instead do.....
 
-      const totalYears = inventors.reduce((total, inventor) => {
-        return total + (inventor.passed - inventor.year);   
-      }, 0); // add 0 here because we didn't have a defined number for the first one
+    const totalYears = inventors.reduce((total, inventor) => {
+      return total + (inventor.passed - inventor.year);
+    }, 0); // add 0 here because we didn't have a defined number for the first one
 
-      console.log(totalYears);
+    console.log(totalYears);
 
     // 5. Sort the inventors by years lived
 
-      const oldest = inventors.sort(function(a,b,) {
-        const lastGuy = a.passed - a.year;
-        const nextGuy = b.passed - b.year;
-        return lastGuy > nextGuy ? -1 :1;
-      });
-        // //instead of ...
-        // if(lastGuy > nextGuy){
-        //   return -1; {
-        //   } else {
-        //     return 1;
-        // }
-      console.table(oldest);
+    const oldest = inventors.sort(function (a, b, ) {
+      const lastGuy = a.passed - a.year;
+      const nextGuy = b.passed - b.year;
+      return lastGuy > nextGuy ? -1 : 1;
+    });
+    // //instead of ...
+    // if(lastGuy > nextGuy){
+    //   return -1; {
+    //   } else {
+    //     return 1;
+    // }
+    console.table(oldest);
 
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
 
-          //1st: inspect w/ devtools and find the html element that contains the boulevard elements in the above page -> mw-category
-          //2nd find html links ('a') inside that -> could do this in one line...
-              //but need to change it into an array -> is just a Node list in the browser
-                  // was ... const links = category.querySelectorAll('a'); 
-                  // const links = Array.from(category.querySelectorAll('a'));  ... or write like below with ES6 spread [...] -> takes iterables out of the node list and puts them in the array
-         //3rd convert those to a list of names
-         //4th filter for streetNames that include 'de' = 12 -> subset
+    //1st: inspect w/ devtools and find the html element that contains the boulevard elements in the above page -> mw-category
+    //2nd find html links ('a') inside that -> could do this in one line...
+    //but need to change it into an array -> is just a Node list in the browser
+    // was ... const links = category.querySelectorAll('a'); 
+    // const links = Array.from(category.querySelectorAll('a'));  ... or write like below with ES6 spread [...] -> takes iterables out of the node list and puts them in the array
+    //3rd convert those to a list of names
+    //4th filter for streetNames that include 'de' = 12 -> subset
 
-        //  const category = document.querySelector('.mw-category');
-        //  const links = [...category.querySelectorAll('a')]; 
-        //  const de = links
-        //         .map(link => link.textContent)
-        //         .filter(streetName => streetName.includes('de'));
-          
+    //  const category = document.querySelector('.mw-category');
+    //  const links = [...category.querySelectorAll('a')]; 
+    //  const de = links
+    //         .map(link => link.textContent)
+    //         .filter(streetName => streetName.includes('de'));
+
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
-      
-      const alpha = people.sort((lastOne, nextOne) => {
-        const [aLast, aFirst] = lastOne.split(', ');
-        const [bLast, bFirst] = nextOne.split(', ');
-        return aLast > bLast ? 1 : -1;
-      });
-      console.log(alpha);
+
+    const alpha = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.log(alpha);
 
 
-    // 8. Reduce Exercise
+    // 8. Reduce Exercise  -> flexible method
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car',
+      'truck', 'pogo-stick'
+    ];
 
+    const transportation = data.reduce(function (obj, item) {
+      if (!obj[item]) {
+        obj[item] = 0; // start with blank object
+      }
+      obj[item]++; //iterate and add them up
+      return obj;
+    }, {});
+    console.log(transportation);
   </script>
 </body>
+
 </html>
