--- a/07 - Array Cardio Day 2/index-WORKING.html
+++ b/07 - Array Cardio Day 2/index-WORKING.html
@@ -63,15 +63,22 @@
 
       //fancier way vvvv to do ^^^^ (arrow function with implicit return)
       const comment = comments.find(comment => comment.id === 823423); //returns boolean t or f
-
       console.log(comment);
-
-
-
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+      const index = comments.findIndex(comment => comment.id === 823423);
+      console.log(index); // 1 = 2nd item in array because index starts at 0
+
+      //comments.splice(index, 1);
+      
+      //or instead create new array of updated comments   ... spread into array
+      const newComments = [
+        ...comments.slice(0, index),
+        ...comments.slice(index + 1)
+      ];
 
   </script>
 </body>
