--- a/07 - Array Cardio Day 2/index-FINISHED.html
+++ b/07 - Array Cardio Day 2/index-FINISHED.html
@@ -61,7 +61,7 @@
       //   }
       // });
 
-      //fancier way vvvv to do ^^^^ (arrow function with implicit return)
+      //better way vvvv to do ^^^^ (arrow function with implicit return)
       const comment = comments.find(comment => comment.id === 823423); //returns boolean t or f
       console.log(comment);
 
